...
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginLeft="145dp"
        android:paddingRight="5dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_compat"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/text_activity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/security_text" />

    <Button
        android:id="@+id/filter_button"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:drawableEnd="@drawable/ic_drop_down"
        android:drawablePadding="10dp"
        android:text="@string/filter"
        android:textAllCaps="false"
        android:layout_below="@id/switch_compat"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:id="@+id/filter_menu"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/filter_button"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        >
...
            android:id="@+id/filter_domain_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domain_name"
            android:textColor="@color/black"/>
        <AutoCompleteTextView
            android:id="@+id/filter_domain_name_autocomplete"
            android:layout_below="@id/filter_domain_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_com"/>

        <TextView
...
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textColor="@color/black"
            android:layout_below="@id/filter_domain_name_autocomplete"/>
        <EditText
            android:id="@+id/filter_start_date_text"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/filter_start_date"
            android:hint="@string/enter_date"
            android:inputType="none"/>

...
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textColor="@color/black"
            android:layout_below="@id/filter_domain_name_autocomplete"
            android:layout_toEndOf="@+id/filter_start_date" />
        <EditText
            android:id="@+id/filter_start_time_text"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/filter_start_time"
            android:layout_toEndOf="@id/filter_start_date_text"
            android:hint="@string/enter_time"
            android:inputType="none"/>
...
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textColor="@color/black"
            android:layout_below="@id/filter_start_date_text"/>
        <EditText
            android:id="@+id/filter_end_date_text"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/filter_end_date"
            android:hint="@string/enter_date"
            android:inputType="none"/>

...
            android:text="@string/end_time"
            android:textColor="@color/black"
            android:layout_below="@id/filter_start_date_text"
            android:layout_toEndOf="@+id/filter_end_date" />

        <EditText
            android:id="@+id/filter_end_time_text"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/filter_end_time"
            android:layout_toEndOf="@id/filter_end_date_text"
            android:hint="@string/enter_time"
            android:inputType="none" />
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/filter_end_date_text"
            android:textColor="@color/black"
            android:text="@string/lists"/>
       <Spinner
           android:id="@+id/filter_list_selector"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@id/filter_list"
           />

        <Button
            android:id="@+id/filter_reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/filter_list_selector"
            android:layout_marginStart="80dp"
            android:text="@string/reset"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:id="@+id/filter_apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/filter_list_selector"
            android:layout_toRightOf="@id/filter_reset_button"
            android:layout_marginStart="80dp"
            android:text="@string/apply"
...

    </RelativeLayout>



    <LinearLayout
        android:id="@+id/activity_list_titles"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/filter_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/domain_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:textSize="18sp"
            android:text="Domain"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/timestamp_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:textSize="18sp"
            android:text="@string/timestamp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/list_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:textSize="18sp"
            android:text="@string/list"
            android:textColor="@color/black"/>
...
        android:layout_height="wrap_content"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/activity_divider"
        android:layout_above="@id/load_more_button"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/load_more_button"
        android:layout_width="125dp"
        android:layout_height="50dp"
...
