<resources>
    <string name="app_name">Securify-Mobile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_out">Sign Out</string>
    <string name="activity">Activity</string>
    <string name="blacklist">Blacklist</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>
    <string name="example_com">example.com</string>
    <string name="add_domain">Add Domain</string>
    <string name="bluetooth">BlueTooth</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="discovered_devices">Discovered Devices</string>
    <string name="whitelist">Whitelist</string>
    <string name="domain">Domain:</string>
    <string name="registry_domain_id">Registry Domain ID:</string>
    <string name="registrar">Registrar:</string>
    <string name="registrar_expiration_date">Registrar Expiration Date:</string>
    <string name="test">Test</string>
    <string name="filter">Filter</string>
    <string name="timestamp">Timestamp</string>
    <string name="list">List</string>
    <string name="load_more">Load More</string>
    <string name="BASE_URL">http://54.70.155.180</string>
    <string name="domain_name">Domain Name</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_time">Enter Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="lists">Lists</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="weekly_statistics">Weekly Statistics</string>
    <string name="daily_usage">Daily Usage</string>
    <string name="top_domains">Top Domains</string>
    <string name="count">Count</string>
    <string name="security">Security</string>
    <string name="device_ip_address">Device IP Address:</string>
    <string name="testing_gmail_address">kellywong48357@gmail.com</string>
</resources>
