<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        />

    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/ic_activity_icon"
        android:title="@string/activity" />

    <item
        android:id="@+id/navigation_whitelist"
        android:icon="@drawable/ic_whitelist_icon"
...
